{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 15,
  "lineage": "7cfee8fa-bafc-ec5c-b525-77ee0c1df41c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/networkInterfaces/ds2022-nic",
            "internal_domain_name_suffix": "sq0ii3fzorsubouhdpfzjpd1hh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ds2022-nic-ip-config",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/publicIPAddresses/ds2022-public-ip",
                "subnet_id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/virtualNetworks/ds2022-vnet/subnets/ds2022-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2F-29-11",
            "name": "ds2022-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "ds2022-rg",
            "virtual_machine_id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Compute/virtualMachines/ds2022"
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.test",
            "azurerm_subnet.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/networkSecurityGroups/ds2022-security-group",
            "location": "westeurope",
            "name": "ds2022-security-group",
            "resource_group_name": "ds2022-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ds2022-security-rule",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/networkSecurityGroups/ds2022-security-group/securityRules/ds2022-security-rule",
            "name": "ds2022-security-rule",
            "network_security_group_name": "ds2022-security-group",
            "priority": 1100,
            "protocol": "Tcp",
            "resource_group_name": "ds2022-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/publicIPAddresses/ds2022-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.95.3.5",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ds2022-public-ip",
            "resource_group_name": "ds2022-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/virtualNetworks/ds2022-vnet/subnets/ds2022-subnet",
            "name": "ds2022-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ds2022-rg",
            "virtual_network_name": "ds2022-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "74843494-74b9-4065-ba87-1bcb94bc7b3f",
            "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/virtualNetworks/ds2022-vnet",
            "location": "westeurope",
            "name": "ds2022-vnet",
            "resource_group_name": "ds2022-rg",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/27c5e17c-361a-4f98-9d85-4c9863db4d3e/resourceGroups/ds2022-rg/providers/Microsoft.Network/virtualNetworks/ds2022-vnet/subnets/ds2022-subnet",
                "name": "ds2022-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}